--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,8 +62,8 @@ background-size: cover;
 color: #fff;
 font-family: 'Helvetica Neue' !important;
 font-stretch: expanded;
-padding-top: 25px;
-padding-bottom: 25px;
+padding-top: 95px;
+padding-bottom: 95px;
 margin-left: 15px;
 margin-right: 15px;
 text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
@@ -89,7 +89,18 @@ size: 120%;
 .sign-up {
 margin-top: 5px;
 }
-
 .extra {
 color: #5cb85c;
+}
+.no-side-padding {
+padding-left: 0;
+padding-right: 0;
+}
+
+.no-left-padding {
+padding-left: 0 !important;
+}
+
+.no-right-padding {
+padding-right: 0 !important;
 }
