--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,8 +13,8 @@ text-align: center;
   }
 }
 .nav.navbar-right {
-padding-bottom: 10px;
-padding-top: 5px;
+  padding-bottom: 10px;
+  padding-top: 5px;
 }
 .nav.navbar-nav {
   .navbar-link {
@@ -45,7 +45,7 @@ padding-top: 5px;
 }
 
 .btn-primary:visited, .btn-danger:visited {
-color: #fff;
+  color: #fff;
 }
 
 .features {
@@ -56,51 +56,60 @@ color: #fff;
 }
 
 .jumbotron {
-text-align:center;
-background-image: asset-url('Cover.jpg');
-background-size: cover;
-color: #fff;
-font-family: 'Helvetica Neue' !important;
-font-stretch: expanded;
-padding-top: 95px;
-padding-bottom: 95px;
-margin-left: 15px;
-margin-right: 15px;
-text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
-  h2 {
-    font-size: 35px !important;
-    .lead {
-      font-family: 'Helvetica Neue' !important;
-      font-size: 30px !important;
+  text-align:center;
+  background-image: asset-url('Cover.jpg');
+  background-size: cover;
+  color: #fff;
+  font-family: 'Helvetica Neue' !important;
+  font-stretch: expanded;
+  padding-top: 95px;
+  padding-bottom: 95px;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+    h2 {
+      font-size: 35px !important;
+      .lead {
+        font-family: 'Helvetica Neue' !important;
+        font-size: 30px !important;
+      }
     }
-  }
 }
 .plan {
-border: 1px solid #e7e7e7;
-border-radius: 5px;
-margin-right: 5px;
+  border: 1px solid #e7e7e7;
+  border-radius: 5px;
+  margin-right: 5px;
 }
 
 .price {
-font-weight: 700;
-size: 120%;
+  font-weight: 700;
+  size: 120%;
 }
 
 .sign-up {
-margin-top: 5px;
+  margin-top: 5px;
 }
 .extra {
-color: #5cb85c;
+  color: #5cb85c;
 }
 .no-side-padding {
-padding-left: 0;
-padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .no-left-padding {
-padding-left: 0 !important;
+  padding-left: 0 !important;
 }
 
 .no-right-padding {
-padding-right: 0 !important;
+  padding-right: 0 !important;
+}
+
+.table tr td {
+  a.main-link {
+    color: #428bca;
+  }
+  a.main-link:hover {
+    background: none;
+  }
 }
