--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Create Password</h1>
 
-<%= form_for(resource, as: resource_name, url: update_user_confirmation_path, 
-										  :html => { :method => :put, class => "form login" }) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => update_user_confirmation_path,
+:html => { :method => :put, :class => "form login" }) do |f| %>
   <%= bootstrap_devise_error_messages! %>
   <%= hidden_field_tag :confirmation_token, @confirmation_token %>
   <div class="form-group">
